fixed mobile with overflow hidden on html,body

--- a/public/sass/modules/_reset.scss
+++ b/public/sass/modules/_reset.scss
@@ -27,9 +27,14 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   /*display: block;*/
 }
+html,body
+{
+	width: 100%;
+	overflow-x: hidden; 
+}
 body {
   line-height: 1;
-  max-width: 100%;
+	width: 100%;
 }
 ol, ul {
   list-style-type: none;
