--- a/public/sass/partials/_header.scss
+++ b/public/sass/partials/_header.scss
@@ -26,9 +26,6 @@
 				color: $color-link-button-h;
 			}
 		}
-		li {
-			width: 100%;
-		}
 	}
 }
 @media screen and (min-width: 50em) {
