--- a/public/sass/partials/_nav.scss
+++ b/public/sass/partials/_nav.scss
@@ -2,7 +2,6 @@ nav {
 	font-family: $header-font;
 	background: $color-background-header;
 	color: $color-text-light;
-	position: fixed;
 	width: 100%;
 	top: 0;
 	height: 3em;
