--- a/public/sass/partials/_pricing.scss
+++ b/public/sass/partials/_pricing.scss
@@ -21,7 +21,6 @@
     font: $text-light-font;
     color: $color-4;
     margin: 2em auto;
-    width: 41em;
     text-align: center;
   }
   h2 {
